Fixes #1131: Analytics box do not overlap without infobox (#1134)

--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -21,7 +21,6 @@
 .infobox{
   float:left;
   margin-right: 15px;
-  margin-top: -95px;
 }
 
 .link > p {
